--- a/stickyheader.css
+++ b/stickyheader.css
@@ -5,6 +5,7 @@
 	background-color: #191919 !important; /*Change this color o suit your header style. This will be the color it will change to once the user starts scrolling*/
 	position: fixed !important;/* This will make the header stay in a fixed position*/
 	top: 0; /*This will keep the header on top of the page*/
+	width: 100% !important; /* In some browsers, the width might misbehave and change the width because o the change in code. So to be sure, make it 100%*/
 }
 
 /*Ensure that you include the !important declaration wherever I have included*/
